@@ -16,7 +16,9 @@
 
 #include "tao/ORB.h"
 
+ACE_BEGIN_VERSIONED_NAMESPACE_DECL
 class ACE_Manual_Event;
+ACE_END_VERSIONED_NAMESPACE_DECL
 
 /// Implements the Task to run the process colocated thread.
 class Server_Task : public ACE_Task_Base
